--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -147,44 +147,44 @@ nav ul li a{
 
   <div class="hero">
     <nav>
-      <img src="images/LOGO.png" class="logo">
+      <img src="../images/LOGO.png" class="logo">
       <ul>
         <li><a href="#">Home</a> </li>
         <li><a href="#">Appointment</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <img src="images/patients.png" class="user-pic" onclick="toggleMenu()">
+      <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
 
       <div class="sub-menu-wrap" id="subMenu">
         <div class="sub-menu">
           <div class="user-info">
-            <img src="images/patients.png">
+            <img src="../images/patients.png">
             <h3>User</h3>
             </div>
             <hr>
 
             <a href="#" class="sub-menu-link">
-              <img src="images/profile.png">
+              <img src="../images/profile.png">
               <p>Edit Profile</p>
               <span>></span>
             </a>
 
             <a href="#" class="sub-menu-link">
-              <img src="images/setting.png">
+              <img src="../images/setting.png">
               <p>Settings & Privacy</p>
               <span>></span>
 
             </a>
 
             <a href="#" class="sub-menu-link">
-              <img src="images/help.png">
+              <img src="../images/help.png">
               <p>Help & Support</p>
               <span>></span>
             </a>
 
             <a href="#" class=sub-menu-link>
-              <img src="images/logout.png">
+              <img src="../images/logout.png">
               <p>Logout</p>
               <span>></span>
             </a>
