--- a/landingHeader.html
+++ b/landingHeader.html
@@ -6,7 +6,7 @@
   
   <style>
     nav {
-      background: #8084e1;
+      background: #DBE2EF;
       width: 100%;
       padding: 3px 10%;
       display: flex;
@@ -38,7 +38,7 @@
     }
 
     nav ul li a {
-      color: #fff;
+      color: #0f418b;
       text-decoration: none;
     }
 
