--- a/landingHeader.html
+++ b/landingHeader.html
@@ -38,7 +38,6 @@
 
     nav ul li a {
       color: #0f418b;
-      text-decoration: none;
       text-decoration: none !important;
 
     }
@@ -50,7 +49,7 @@
       color: rgb(0, 0, 0);
       padding: 8px 15px;
       text-align: center;
-      text-decoration: none;
+      text-decoration: none !important;
       display: inline-block;
       font-size: 16px;
       margin: 3px 2px;
