--- a/user/userHeader.html
+++ b/user/userHeader.html
@@ -74,20 +74,75 @@ nav ul li a{
   background:#fff;
   padding:20px;
   margin:10px;
-  position: relative;
-  z-index: 10; 
+  position: relative !important;
+  z-index: 9999 !important; 
 }
-
-.user-info{
-  display:flex;
-}
-
 
 
 
 nav ul li a:hover {
   color: blue; /* Change to your desired hover color */
+  
 }
+
+
+.user-info{
+  display:flex;
+  align-items:center;
+}
+
+.user-info h3{
+  font-weight:500;
+}
+
+.user-info img{
+  width:40px;
+  border-radius:50%;
+  margin-right:15px;
+}
+
+.sub-menu hr{
+  border:0;
+  height:1px;
+  width:100%;
+  background:#ccc;
+  margin:15px 0 10px; 
+
+}
+
+.sub-menu-link{
+  display:flex;
+  align-items:center;
+  text-decoration: none !important;
+  color:#525252;
+  margin:12px 0;
+}
+
+.sub-menu-link p{
+  width:100%;
+}
+
+.sub-menu-link img{
+  width:40px;
+  background:#e5e5e5;
+  border-radius: 50%;
+  padding:8px;
+  margin-right:15px;
+}
+
+.sub-menu-link span{
+  font-size:20px;
+  transition:transform 0.5s;
+}
+
+.sub-menu-link:hover span{
+  transform:translateX(5px);
+}
+
+.sub-menu-link:hover p{
+  font-weight:600;
+}
+
 
 
 
