Admin manage dashboard

--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -154,10 +154,9 @@ nav ul li a:hover {
     <nav>
       <img src="../images/LOGO.png" class="logo">
       <ul>
-        <li><a href="./userdashboard.php">Home</a> </li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="./appointment_form.php">Make Appointment</a></li>
-        <li><a href="contactuser.php">Contact Us</a></li>
+        <li><a href="./dashboard.php">Home</a> </li>
+        <li><a href="#">User Management</a></li>
+        <li><a href="#">Doctor Management</a></li>
       </ul>
       <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
 
@@ -165,7 +164,7 @@ nav ul li a:hover {
         <div class="sub-menu">
           <div class="user-info">
             <img src="../images/patients.png">
-            <h3>User</h3>
+            <h3>Admin</h3>
             </div>
             <hr>
 
