--- a/doctor/doctorHeader.html
+++ b/doctor/doctorHeader.html
@@ -144,53 +144,9 @@ nav ul li a:hover {
   font-weight:600;
 }
 
-.dropdown{
-  position:relative;
-  display:inline-block;
-}
-
-.dropbtn{
-  color:rgb(0, 0, 0);
-  text-decoration: none !important;
-  cursor:pointer;
-}
-
-.dropdown-content{
-  display:none;
-  position:absolute;
-  background-color: #fff;
-  min-width: 15px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index:1;
-}
-
-.dropdown-content a{
-  position: relative;
-  text-decoration: none !important;
-  display: block;
-  padding: 12px 45px 12px 16px;
-  font-weight: normal;
-  text-align: left;
-}
-
-.dropdown-content a::before {
-  content: "\2192"; /* Unicode arrow character, you can use other arrow characters too */
-  position: absolute;
-  right: 20px; /* Adjust the positioning of the arrow as needed */
-}
-
-
-.dropdown-content a:hover {
-  background-color: #DBE2EF;
-  color: blue; /* Change to your desired hover color */
-  font-weight: bold; /* Change the font weight to bold on hover */
-}
 
 
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
   </style>
 </head>
 <body>
@@ -200,13 +156,7 @@ nav ul li a:hover {
       <ul>
         <li><a href="./userdashboard.php">Home</a> </li>
         <li><a href="#">About Us</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropbtn">Appointment</a>
-          <div class="dropdown-content">
-            <a href="./appointment_form.php">Make Appointment</a>
-            <a href="#">Appointment History</a>
-          </div>
-        </li>
+        <li><a href="./appointment_form.php"> Appointment</a></li>
         <li><a href="contactuser.php">Contact Us</a></li>
       </ul>
       <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
@@ -260,4 +210,3 @@ nav ul li a:hover {
       subMenu.classList.toggle("open-menu");
     }
   </script>
-
