--- a/doctor/doctorHeader.html
+++ b/doctor/doctorHeader.html
@@ -156,7 +156,7 @@ nav ul li a:hover {
       <ul>
         <li><a href="./userdashboard.php">Home</a> </li>
         <li><a href="#">About Us</a></li>
-        <li><a href="./appointment_form.php"> Appointment</a></li>
+        <li><a href="../user/appointment_form.php"> Appointment</a></li>
         <li><a href="contactuser.php">Contact Us</a></li>
       </ul>
       <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
