update dashboard table name

--- a/doctor/doctorHeader.html
+++ b/doctor/doctorHeader.html
@@ -165,7 +165,7 @@ nav ul li a:hover {
         <div class="sub-menu">
           <div class="user-info">
             <img src="../images/patients.png">
-            <h3>User</h3>
+            <h3>Doctor</h3>
             </div>
             <hr>
 
