dr header update

--- a/doctor/doctorHeader.html
+++ b/doctor/doctorHeader.html
@@ -154,10 +154,10 @@ nav ul li a:hover {
     <nav>
       <img src="../images/LOGO.png" class="logo">
       <ul>
-        <li><a href="./userdashboard.php">Home</a> </li>
+        <li><a href="./dashboard.php">Home</a> </li>
         <li><a href="#">About Us</a></li>
-        <li><a href="./appointment_form.php"> Appointment</a></li>
-        <li><a href="contactuser.php">Contact Us</a></li>
+        <li><a href="#"> Appointment</a></li>
+        <li><a href="../user/contactuser.php">Contact Us</a></li>
       </ul>
       <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
 
