prob: contactus for doctor header

--- a/doctor/doctorHeader.html
+++ b/doctor/doctorHeader.html
@@ -157,7 +157,7 @@ nav ul li a:hover {
         <li><a href="./dashboard.php">Home</a> </li>
         <li><a href="#">About Us</a></li>
         <li><a href="doctorManageAppoint.php"> Appointment</a></li>
-        <li><a href="../user/contactuser.php">Contact Us</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
       <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
 
