--- a/doctor/doctorHeader.html
+++ b/doctor/doctorHeader.html
@@ -8,7 +8,7 @@
 *{
   margin:0;
   padding: 0;
-  font-family:'Poppins', sans-serif !important;
+  font-family:'Poppins', sans-serif;
   box-sizing:border-box;
   
 }
