--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -156,7 +156,7 @@ nav ul li a:hover {
       <ul>
         <li><a href="./dashboard.php">Home</a> </li>
         <li><a href="./userManagement.php">User Management</a></li>
-        <li><a href="#">Doctor Management</a></li>
+        <li><a href="./contactManagement.php">Contact Management</a></li>
       </ul>
       <img src="../images/patients.png" class="user-pic" onclick="toggleMenu()">
 
