--- a/admin/adminHeader.html
+++ b/admin/adminHeader.html
@@ -187,7 +187,7 @@
               <span>></span>
             </a>
 
-            <a href="../sign_out.php" class=sub-menu-link onclick="return confirm('Are you sure you want to log out?');">
+            <a href="../index.php?controller=LoginController&action=logout" class=sub-menu-link onclick="return confirm('Are you sure you want to log out?');">
               <img src="../images/logout.png">
               <p>Logout</p>
               <span>></span>
